--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,12 @@ name = "rust-redis"
 version = "0.1.0"
 edition = "2021"
 authors=["Shivam <tanejashivam.st@gmail.com>"]
+
+
 [dependencies]
 anyhow = "1.0.59"                                   # error handling
 bytes = "1.3.0"                                     # helps manage buffers
 thiserror = "1.0.32"                                # error handling
 tokio = { version = "1.23.0", features = ["full"] } # async networking
 regex = "1"
+redis = "0.27.4"
